# linuxmodule

./: .my_module.ko.cmd  .my_module.mod.o.cmd  .my_module.o.cmd  Makefile  Makefile1  README  main.c1  modules.order  my_module.c  my_module.ko  my_module.mod.c
parted-1.6.25.1/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  aclocal.m4  config.h  config.h.in  config.rpath  config.status  config.sub  configure  configure.in  depcomp  libtool  ltconfig  ltmain.sh  missing  parted.m4  parted.spec
parted-1.6.25.1/debug/: Makefile  Makefile.in
parted-1.6.25.1/debug/clearfat/: Makefile  Makefile.in  clearfat.c
parted-1.6.25.1/debug/test/: Makefile  Makefile.in
parted-1.6.25.1/doc/: API  FAQ  FAQ-pt_BR  Makefile  Makefile.am  Makefile.in  USER.jp  parted-pt_BR.texi  parted.8  parted.info  parted.texi  stamp-vti
parted-1.6.25.1/include/: Makefile  Makefile.in
parted-1.6.25.1/include/parted/: Makefile  Makefile.in  debug.h  device.h  disk.h  exception.h  filesys.h  geom.h  linux.h  natmath.h  parted.h  timer.h  unit.h
parted-1.6.25.1/libparted/: Makefile  Makefile.am  Makefile.in  constraint.c  debug.c  device.c  disk.c  disk_amiga.c  disk_bsd.c  disk_dos.c  disk_dvh.c  disk_gpt.c  disk_loop.c  disk_mac.c  disk_pc98.c  disk_sun.c  exception.c  filesys.c  geom.c  gnu.c  libparted.c  linux.c  natmath.c  timer.c  unit.c
parted-1.6.25.1/libparted/fs_amiga/: Makefile  Makefile.in  affs.c  affs.lo  amiga.c  amiga.lo  apfs.c  apfs.loT  asfs.c  asfs.lo
parted-1.6.25.1/libparted/fs_ext2/: Makefile  Makefile.in  ext2.c  ext2.h  ext2_block_relocator.c  ext2_meta.c  ext2_mkfs.c  ext2_resize.c  interface.c
parted-1.6.25.1/libparted/fs_fat/: Makefile  Makefile.in  fat.c
parted-1.6.25.1/libparted/fs_hfs/: Makefile  Makefile.in  TODO  advfs.c  advfs_plus.c  cache.c  cache.h  file.c  file_plus.c  hfs.c  hfs.h  journal.c  probe.c  probe.h  reloc.c  reloc_plus.c
parted-1.6.25.1/libparted/fs_jfs/: Makefile  Makefile.in  jfs.c  jfs_types.h
parted-1.6.25.1/libparted/fs_linux_swap/: Makefile  Makefile.in  linux_swap.c
parted-1.6.25.1/libparted/fs_ntfs/: Makefile  Makefile.in  ntfs.c
parted-1.6.25.1/m4/: ChangeLog  Makefile  Makefile.in
parted-1.6.25.1/parted/: Makefile  Makefile.am  Makefile.in  command.c  command.h  parted.c  strlist.h  ui.c
parted-1.6.25.1/partprobe/: Makefile  Makefile.in
parted-1.6.25.1/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  gl.gmo  gl.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  nn.gmo  nn.po  parted.pot  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sv.gmo  sv.po  tr.gmo  (+9 more)
(+19 files in other folders)
